--- a/michael/custom.html
+++ b/michael/custom.html
@@ -92,69 +92,9 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
  <!-- Main jumbotron for a primary marketing message or call to action -->
-    <h1>Adidas News</h1>
-    <div class="jumbotron" id="slider">
-      <div class="container">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-		  <!-- Indicators -->
-		  <ol class="carousel-indicators">
-		    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		    <li data-target="#myCarousel" data-slide-to="1"></li>
-		    <li data-target="#myCarousel" data-slide-to="2"></li>
-		    <li data-target="#myCarousel" data-slide-to="3"></li>
-		  </ol>
-
-		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner" role="listbox">
-		    <div class="item active">
-		      <img src="static/img/adidas3.jpg" alt="bk">
-		      <div class="carousel-caption">
-		      <p align="center">ADIDAS CAMPUS 80S JAPAN NAVY/ OFF WHITE/ CORE WHITE RELEASE INFO</p>
-		      <p>Adidas Campus 80s Japan Navy/ Off White/ Core White Released @ asphaltgold Now the second pair of the adidas Campus 80 Japan Pack Vintage is available at asphaltgold in Darmstadt. The shoe has a rich navy suede upper with some Core White three stripes and heel tab....</p>
-		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/adidas-campus-80s-japan-navy-off-white-core-white-release-info/" role="button">Read More &raquo;</a></p>
-		      </div>
-		    </div>
-
-		   <div class="item">
-		     <img src="static/img/adidas2.jpg" alt="bk">
-		      <div class="carousel-caption">
-		      <p align="center">UNDFT X ADIDAS ORIGINALS LOS ANGELES</p>
-		      <p>Adidas unveils it’s latest lifestyle silhouette with a big bang – the Los Angeles, a updated variant of the classic LA Trainer style is already available at adidas retailers, but something special is about to be released very soon. Adidas Consortium teamed up with LA based...</p>
-		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/undft-x-adidas-originals-los-angeles/" role="button" target="_blank">Read More &raquo;</a></p>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="static/img/adidas4.jpg" alt="bk">
-		      <div class="carousel-caption">
-		      <p align="center">ADIDAS FORUM LO – COOL GREY/ FOOTWEAR WHITE RELEASE INFO</p>
-		      <p>Adidas Forum Lo - Cool Grey/ Footwear White Released @ asphaltgold It's quite crazy what adidas Originals is releasing these days. Here is the first colorway of the new retro from the adidas Forum Lo. The shoe has a cool grey upper of suede and smooth leather....</p>
-		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/adidas-forum-lo-cool-grey-footwear-white-release-info/" role="button" target="_blank">Read More &raquo;</a></p>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="static/img/adidas5.png" alt="bk">
-		      <div class="carousel-caption">
-		      <p>ADIDAS TECH SUPER W “COCKTAIL PACK”</p>
-		      <p>Good news for the girls – This wonderful summer colorway of the Tech Super silhouette was just released last saturday. Bright, summerly colors make the Adidas Super W "Cocktail Pack" a good choice for warm evenings outside. Get your pair now at Titelhelden, solesupplier and other...</p>
-		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/adidas-tech-super-w-cocktail-pack/" role="button" target="_blank">Read More &raquo;</a></p>
-		      </div>
-		    </div>
-		  </div>
-
-		  <!-- Left and right controls -->
-		  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
-		</div>
-      </div>
-    </div>
+    <h1>Customize!</h1>
+    
+    
       <hr>
 
       <footer>
