--- a/michael/index.html
+++ b/michael/index.html
@@ -16,16 +16,18 @@
 		height: 80px;
 		width: 100px;
 		float: left;
+		padding: 3px;
 	}
 	h1 {
 		text-align: center;
 		font-size: 60px;
 		font-weight: bold;
 		font-family: "Times New Roman", Georgia, Serif;
+		text-shadow: 3px 3px #9e9e9e;
 	}
 	#slider {
-		margin-right: 30%;
-
+		margin-right: 35%;
+		margin-left: 2%;
 	}
 	p {
 		color: white;
@@ -72,7 +74,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">Customize <span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="custom.html">Customize <span class="sr-only">(current)</span></a></li>
 	       		<li><a href="index.html">Home</a></li>
 	            <li><a href="nike.html">Nike</a></li>
 	            <li><a href="adidas.html">Adidas</a></li>
