--- a/michael/jordan.html
+++ b/michael/jordan.html
@@ -16,20 +16,23 @@
 		height: 80px;
 		width: 100px;
 		float: left;
+		padding: 3px;
 	}
 	h1 {
 		text-align: center;
 		font-size: 60px;
 		font-weight: bold;
 		font-family: "Times New Roman", Georgia, Serif;
+		text-shadow: 3px 3px #9e9e9e;
 	}
 	#slider {
-		margin-right: 30%;
-
+		margin-right: 35%;
+		margin-left: 2%;
 	}
 	p {
 		color: white;
-		 text-shadow: 2px 2px black;
+		text-shadow: 2px 2px black;
+		font-size: 5px;
 	}
 </style>
 </head>    
@@ -71,7 +74,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">Customize <span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="custom.html">Customize <span class="sr-only">(current)</span></a></li>
 	        	<li><a href="index.html">Home</a></li>
 	            <li><a href="nike.html">Nike</a></li>
 	            <li><a href="adidas.html">Adidas</a></li>
@@ -104,34 +107,38 @@
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner" role="listbox">
 		    <div class="item active">
-		      <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/jordan1.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">AIR JORDAN 1 RETRO HIGH OG – WHITE/ VARSITY RED-BLACK 2015 RELEASE INFO</p>
+		      <p>Air Jordan 1 Retro High OG – White/ Varsity Red-Black 2015 Release May 30th, 2015 @ SNIPES, asphaltgold, Afew @ 43einhalb Tommorow will be the release of the Air Jordan 1 in the Chicago Colorway, about which we already talked in detail three days ago.  Of course...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/air-jordan-1-retro-high-og-whitevarsity-red-black-2015-release-info/" role="button" target="blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		     <img src="static/img/bk.jpg" alt="bk">
+		     <img src="static/img/jordan2.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">AIR JORDAN 1 “PINNACLE” – RELEASE INFO</p>
+		      <p>Right about when Jordan is releasing one of the most hyped Jordan 1 Retros, the Chichago 1's, they drop the Air Jordan 1 "Pinnacle". The pair that celebrates the 30th anniversary of Jordan Brand, is going to retail for 400 $ and will be available...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/air-jordan-1-pinnacle-release-info/" role="button" target="blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		      <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/jordan4.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">AIR JORDAN 7 RETRO – WHITE/ TRUE RED-SILVER RELEASE INFO</p>
+		      <p>Air Jordan 7 Retro - Hare Release May 16th, 2015 @ SNIPES Michael Jordan and Bugs Bunny first teamed up in the year 1992. They collaborated on the Air Jordan 7 and created the Hare colorway of Jordan's seventh signature model. Some white and silver panels in...</p>
+		      <p><a class="btn btn-primary btn-lg" href="#" role="button" target="blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		      <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/jordan3.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">AIR JORDAN 11 RETRO LOW “TRUE RED” – RELEASE INFO</p>
+		      <p>One of the most hyped Jordan Retro's got cut in half and is going to be released on May 23rd. The Air Jordan 11 Retro Low "True Red" comes in the classic red/black colorway and is almost as anticipated as it's big brother, the Jordan...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/air-jordan-11-retro-low-true-red/" role="button" target="blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 		  </div>
