--- a/michael/nike.html
+++ b/michael/nike.html
@@ -16,19 +16,24 @@
 		height: 80px;
 		width: 100px;
 		float: left;
+		padding: 3px;
 	}
 	h1 {
 		text-align: center;
 		font-size: 60px;
 		font-weight: bold;
 		font-family: "Times New Roman", Georgia, Serif;
+		text-shadow: 3px 3px #9e9e9e;
+		b
 	}
 	#slider {
-		margin-right: 30%;
+		margin-right: 35%;
+		margin-left: 2%;
 	}
 	p {
 		color: white;
-		 text-shadow: 2px 2px black;
+		text-shadow: 2px 2px black;
+		font-size: 5px;
 	}
 </style>
 </head>
@@ -70,7 +75,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li class="active"><a href="#">Customize <span class="sr-only">(current)</span></a></li>
+	        <li class="active"><a href="custom.html">Customize <span class="sr-only">(current)</span></a></li>
 	            <li><a href="index.html">Home</a></li>
 	            <li><a href="nike.html">Nike</a></li>
 	            <li><a href="adidas.html">Adidas</a></li>
@@ -102,35 +107,39 @@
 
 		  <!-- Wrapper for slides -->
 		  <div class="carousel-inner" role="listbox">
-		    <div class="item active">
-		      <img src="static/img/bk.jpg" alt="bk">
+		     <div class="item active">
+		      <img src="static/img/nike1.jpg" alt="bk" align="center">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">Nike Air Trainer 1 Mid QS</p>
+		      <p>Puerto Rico Release June 14th, 2015 @ Nike.com and Kasina June 14th is celebrated the Puerto Rican Day in New York City. Especially for this day, Nike Sportswear has designed a Nike Air Trainer 1, which will be released as...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-air-trainer-1-mid-qs-puerto-rico-images/" role="button" target="_blank">Read More &raquo;</a></p>
+		      </div>
+		    </div>
+		    
+		    <div class="item">
+		      <img src="static/img/nike2.jpg" alt="bk">
+		      <div class="carousel-caption">
+		      <p align="center">FAMILIA SKATESHOP X NIKE DUNK HIGH PRO SB – BLUE OX IMAGES</p>
+		      <p>Familia Skateshop x Nike Dunk High Pro SB - Blue Ox Release June 27th, 2015 @ Familia Probably only in the US, this Nike Dunk High Pro SB will be released on June 27th, 2015. It's a collaboration from Nike Skateboarding with Minneapolis-based skate shop Familia for...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/familia-skate-shop-x-nike-dunk-high-pro-sb-blue-ox-images/" role="button" target="_blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		     <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/nike3.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">NIKE AIR TRAINER 3 – WHITE/ WHITE-GUM RELEASE INFO</p>
+		      <p>Nike Air Trainer 3 - White/ White-Gum Released @ SNIPES Recently I've introduced two colorways of the Nike Air trainer 3 Gum Pack, now the third colorway has arrived in Germany at SNIPES. We see the White/ Gum version of the Nike Air Trainer 3 which doesn't...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-air-trainer-3-white-white-gum-release-info/" role="button" target="blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 
 		    <div class="item">
-		      <img src="static/img/bk.jpg" alt="bk">
+		      <img src="static/img/nike4.jpg" alt="bk">
 		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-		      </div>
-		    </div>
-
-		    <div class="item">
-		      <img src="static/img/bk.jpg" alt="bk">
-		      <div class="carousel-caption">
-		      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-		      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+		      <p align="center">NIKE BASKETBALL ELITE SERIES ROSE GOLD COLLECTION – RELEASE INFO</p>
+		      <p>Another Nike Basketball Elite Collection is dropping on the 5th of June and it's going to be luxurious. The theme for this time's pack is rose gold and consists of the KD 7 Elite, the Kobe X Elite and the LeBron 12 Elite. All three...</p>
+		      <p><a class="btn btn-primary btn-lg" href="http://sneakers-magazine.com/nike-basketball-elite-series-rose-gold-collection/" role="button" target="blank">Read More &raquo;</a></p>
 		      </div>
 		    </div>
 		  </div>
